<resources>
    <string name="app_name">Shopping Cart</string>
    <string name="shoppingCart">Shopping Cart</string>
    <string name="button">Button</string>
    <string name="insert">Insert new</string>
    <string name="delete">Delete</string>
    <string name="list">List</string>
    <string name="addName">Add Name</string>
    <string name="addPrice">Add Price</string>
    <string name="addDesc">Add Description</string>
    <string name="main">Mobil alkalmazasfejlesztes gyakorlat</string>
    <string name="me">Keszitette: Szakalos Tamas</string>
    <string name="List">List</string>
    <string name="back">Back</string>
    <string name="update">Update</string>
    <string name="update_id">Update id szerint</string>
    <string name="add_id">Add id</string>
    <string name="newPrice">New Price</string>
    <string name="del_id">Delete id alapjan</string>
    <string name="udpate">Update</string>
    <string name="add_new">Add</string>
    <string name="addId">Add id</string>
    <string name="add">Add</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="passwordagain">Confirm password</string>
    <string name="email">Email</string>
    <string name="Name">Name</string>
    <string name="Price">Price</string>
    <string name="Description">Description</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="del_name">Delete by name</string>
    <string name="add_name">Add name</string>
    <string name="newName">New name</string>
    <string name="oldName">Old name</string>
    <string name="update_name">Update by name</string>
    <string name="logout">Logout</string>
</resources>