<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:background="@drawable/background">

    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/add_new"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="84dp"
        android:inputType="text"
        android:text="@string/add_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:hint="@string/addName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_new" />

    <EditText
        android:id="@+id/addPrice"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:hint="@string/addPrice"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addName" />

    <EditText
        android:id="@+id/addDesc"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/addDesc"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPrice" />

    <Button
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="#0000ff"
        android:id="@+id/addBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDesc"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="#0000ff"
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:onClick="back"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>